--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 version: '3.9'
 
+networks:
+  minha-rede:
+    driver:
+      bridge
+
 services:
   database:
     image: postgres
     container_name: container_postgres_api
+    networks:
+      - minha-rede
     ports:
       - 5432:5432
     environment:
@@ -14,5 +21,13 @@ services:
       - .:/data
       - ./create_table.sql:/docker-entrypoint-initdb.d/create_table.sql
 
-
-  
+  minha-api:
+    build: .
+    container_name: minha-api-container
+    networks:
+      - minha-rede
+    ports:
+      - "3000:3000"
+    restart: always
+    depends_on:
+      - database
